@@ -1,18 +1,0 @@
-#!/bin/sh
-set -e
-
-THIS_PACKAGE=xserver-xorg-input-vmmouse
-THIS_SCRIPT=postinst
-
-#INCLUDE_SHELL_LIB#
-
-case "$1" in 
-  configure)
-  if dpkg --compare-versions  "$2" lt 1:12.6.5-4; then
-    udevadm trigger --subsystem-match=input --action=change || true
-  fi
-esac
-
-#DEBHELPER#
-
-exit 0
